--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -21,12 +21,22 @@
       text-align: left;
       white-space: pre-line;
       font-weight: 400;
+      width: 100%;
+      height: 50vh;
 
       @media #{$media} {
-        font-weight: 300;
         width: 50vw;
+        height: auto;
+        font-weight: 300;
         font-size: 1.5rem;
       }
+    }
+
+    &__photo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50vh;
     }
   }
 
@@ -35,74 +45,73 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    @media #{$media} {
-      min-height: 100vh;
-    }
+    min-height: 100vh;
 
     &__content {
-      display: flex;
+      display: block;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      min-height: 50vh;
+      min-height: 100vh;
+      max-width: $size * 30;
       background: $color-background;
+      border-radius: ($size / 3) ($size / 3) 0 0;
+      box-shadow: 0 0 10px rgba($color-text, .2);
       text-align: left;
+      overflow: hidden;
 
       @media #{$media} {
-        display: block;
-        min-height: 50vh;
-        max-width: $size * 30;
-        max-height: 60vh;
         margin: 0 ($size * 2);
-        box-shadow: 0 0 10px rgba($color-text, .2);
         border-radius: $size / 3;
-        overflow: hidden;
+        min-height: 100vh;
+      }
 
-        &__heading {
+      &__heading {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: ($size / 5) ($size / 2);
+        background: $color-silver;
+
+        &__title {
+          font-family: 'Source Code Pro', monospace;
+          font-weight: 300;
+        }
+
+        &__buttons {
           display: flex;
-          justify-content: space-between;
+          justify-content: space-evenly;
           align-items: center;
-          padding: ($size / 5) ($size / 2);
-          background: $color-silver;
 
-          &__title {
-            font-family: 'Source Code Pro', monospace;
-            font-weight: 300;
-          }
+          &__button {
+            height: $size / 3;
+            width: $size / 3;
+            margin: 0 0 0 ($size / 3);
+            border-radius: $size / 3;
 
-          &__buttons {
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
+            &--green {
+              background: $color-green;
+            }
 
-            &__button {
-              height: $size / 3;
-              width: $size / 3;
-              margin: 0 0 0 ($size / 3);
-              border-radius: $size / 3;
+            &--orange {
+              background: $color-orange;
+            }
 
-              &--green {
-                background: $color-green;
-              }
-
-              &--orange {
-                background: $color-orange;
-              }
-
-              &--red {
-                background: $color-red;
-              }
+            &--red {
+              background: $color-red;
             }
           }
         }
+      }
 
-        &__body {
-          max-width: 75%;
+      &__body {
+        padding: $size / 2;
+        letter-spacing: 2px;
+        line-height: 1.75rem;
+
+        @media #{$media} {
           padding: $size;
-          font-weight: 400;
-          letter-spacing: 2px;
-          line-height: 2rem;
+          max-width: 75%;
         }
       }
     }
